--- a/src/component/pages/cafe/cafe.module.scss
+++ b/src/component/pages/cafe/cafe.module.scss
@@ -10,6 +10,7 @@ $_text_size_desktop: 22px;
   flex-direction: column;
 }
 
+.wrapper,
 .dropdown,
 .cafeHours,
 .leftSection,
